--- a/config.env
+++ b/config.env
@@ -1,7 +1,11 @@
 JWT_SECRET=1@munh@ck@bl3
+JWT_VERIFY_LOGIN=C0D3_S3ND_T0_M@1L
 COOKIE_EXPIRES_IN=30d
 
 BROWSER_COOKIES_EXPIRES_IN=10
 
 FORGET_PASSWORD_EXPIRES_AT=10M
 REFRESH_TOKEN=90d
+
+MIN_GENERATION=100000
+MAX_GENERATION=999999
