--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mailgun.js": "^9.1.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.5",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pm2": "^5.3.0",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "twilio": "^4.13.0"
   }
 }
