added verification through mail

--- a/config.env
+++ b/config.env
@@ -9,3 +9,6 @@ REFRESH_TOKEN=90d
 
 MIN_GENERATION=100000
 MAX_GENERATION=999999
+
+JWT_VERIFICATION_SECRET = V3R1F1C@T1I0N_S3CR3T
+JWT_VERIFICATION_EXPIRESIN = 5M
