changes on railway

--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ MAX_GENERATION=999999
 
 JWT_VERIFICATION_SECRET = V3R1F1C@T1I0N_S3CR3T
 JWT_VERIFICATION_EXPIRESIN = 5M
+
+# RAIL WAY
+DB_HOST = containers-us-west-117.railway.app
+DB_USER = root
+DB_PASS = pVQeT8xkPDPuPz215c7Z
+DB_PORT = 7527
+DB_COLLECTION = railway
