updated product model and added error handler

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# COOKIE HASHING
 JWT_SECRET=1@munh@ck@bl3
 JWT_VERIFY_LOGIN=C0D3_S3ND_T0_M@1L
 COOKIE_EXPIRES_IN=30d
@@ -7,17 +8,25 @@ BROWSER_COOKIES_EXPIRES_IN=10
 FORGET_PASSWORD_EXPIRES_AT=10M
 REFRESH_TOKEN=90d
 
+# CODE GENERATION
 MIN_GENERATION=100000
 MAX_GENERATION=999999
 
+# EMAIL ID VERIFICATION
 JWT_VERIFICATION_SECRET = V3R1F1C@T1I0N_S3CR3T
 JWT_VERIFICATION_EXPIRESIN = 5M
 
-# RAIL WAY
-DB_HOST = containers-us-west-117.railway.app
+# RAIL WAY CONFIG
+DB_URL = mysql://root:jtwlz44uEDOs60ip5J1C@containers-us-west-112.railway.app:7430/railway
+DB_HOST = containers-us-west-112.railway.app
 DB_USER = root
-DB_PASS = pVQeT8xkPDPuPz215c7Z
-DB_PORT = 7527
+DB_PASS = jtwlz44uEDOs60ip5J1C
+DB_PORT = 7430
 DB_COLLECTION = railway
 
-ENVIROMENT = production
+# EMAIL SEND
+EMAIL = bebishnewar@gmail.com
+PASSWORD = qszjvbtkyhvlkloo
+
+# NODE ENVIROMENT
+ENVIROMENT = development
