--- a/.env
+++ b/.env
@@ -30,3 +30,12 @@ PASSWORD = qszjvbtkyhvlkloo
 
 # NODE ENVIROMENT
 ENVIROMENT = development
+
+# ADMIN DETAILS
+FIRST_NAME=ADMIN
+LAST_NAME=ADMIN
+ROLE=admin
+CONTACT=9800000000
+VERIFIED_STATUS=TRUE
+EMAIL= kalobhatbhateadmin010@admin.com
+PASSWORD = k@10bh@tbh@t3Adm1n
