--- a/.env
+++ b/.env
@@ -1,1 +1,51 @@
+# COOKIE HASHING
+JWT_SECRET=1@munh@ck@bl3
+JWT_VERIFY_LOGIN=C0D3_S3ND_T0_M@1L
+COOKIE_EXPIRES_IN=30d
 
+BROWSER_COOKIES_EXPIRES_IN=10
+
+FORGET_PASSWORD_EXPIRES_AT=10M
+REFRESH_TOKEN=90d
+
+# CODE GENERATION
+MIN_GENERATION=100000
+MAX_GENERATION=999999
+
+# EMAIL ID VERIFICATION
+JWT_VERIFICATION_SECRET = V3R1F1C@T1I0N_S3CR3T
+JWT_VERIFICATION_EXPIRESIN = 5M
+
+# RAIL WAY CONFIG
+DB_URL = mysql://root:jtwlz44uEDOs60ip5J1C@containers-us-west-112.railway.app:7430/railway
+DB_HOST = containers-us-west-112.railway.app
+DB_USER = root
+DB_PASS = jtwlz44uEDOs60ip5J1C
+DB_PORT = 7430
+DB_COLLECTION = railway
+
+# EMAIL SEND
+EMAIL = bebishnewar@gmail.com
+PASSWORD = qszjvbtkyhvlkloo
+
+# NODE ENVIROMENT
+ENVIROMENT = development
+
+# ADMIN DETAILS
+FIRST_NAME=ADMIN
+LAST_NAME=ADMIN
+ROLE=admin
+CONTACT=9800000000
+VERIFIED_STATUS=TRUE
+EMAIL= kalobhatbhateadmin010@admin.com
+PASSWORD = k@10bh@tbh@t3Adm1n
+
+
+
+
+
+CLIENT_ID = "858571916851-e110oimm0rebon5dvbs6dubi9lgnhdm7.apps.googleusercontent.com"
+CLIENT_SECRET = "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"
+
+CLIENT_URL = "http://localhost:5173/"
+REDIRECT_URI = 'http://localhost:80/callback'
