--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pm2": "^5.3.0",
+    "rate-limit": "^0.1.1",
     "sequelize": "^6.32.1",
     "twilio": "^4.13.0"
   }
