added search feature and try catch on upload product

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# port
+PORT = 8000
+
 # COOKIE HASHING
 JWT_SECRET=1@munh@ck@bl3
 JWT_VERIFY_LOGIN=C0D3_S3ND_T0_M@1L
@@ -39,3 +42,14 @@ CONTACT=9800000000
 VERIFIED_STATUS=TRUE
 EMAIL= kalobhatbhateadmin010@admin.com
 PASSWORD = k@10bh@tbh@t3Adm1n
+
+# express-session secret
+session_secret = s2ss10n_s3cr31-
+
+# google auth
+CLIENT_ID = "858571916851-e110oimm0rebon5dvbs6dubi9lgnhdm7.apps.googleusercontent.com"
+CLIENT_SECRET = "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"
+
+CLIENT_URL = "http://localhost:5173/"
+REDIRECT_URI = 'http://localhost:80/callback'
+
