--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 JWT_SECRET=1@munh@ck@bl3
 JWT_VERIFY_LOGIN=C0D3_S3ND_T0_M@1L
 COOKIE_EXPIRES_IN=30d
-
+CORSORIGIN_URL=http://localhost:3000
 BROWSER_COOKIES_EXPIRES_IN=10
 
 FORGET_PASSWORD_EXPIRES_AT=10M
