--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ejs": "^3.1.9",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mailgun.js": "^9.1.1",
