--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ DB_PORT = 7430
 DB_COLLECTION = railway
 
 # EMAIL SEND
-EMAIL = bebishnewar@gmail.com
-PASSWORD = qszjvbtkyhvlkloo
+MAIL_USERNAME= ngr112001@gmail.com
+APP_PASSWORD = wqjqmetwtawfyvts
 
 # NODE ENVIROMENT
 ENVIROMENT = development
