--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "start-test-pm2": "pm2 nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,18 +19,18 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mailgun.js": "^9.1.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.5",
     "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
-    "pm2": "^5.3.0",
+    "pm2": "^4.2.3",
     "rate-limit": "^0.1.1",
     "sequelize": "^6.32.1",
     "twilio": "^4.13.0"
