--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
@@ -27,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.5",
     "nodemailer": "^6.9.3",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
