changed to production

--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ EMAIL = bebishnewar@gmail.com
 PASSWORD = qszjvbtkyhvlkloo
 
 # NODE ENVIROMENT
-ENVIROMENT = development
+ENVIROMENT = production
 
 # ADMIN DETAILS
 FIRST_NAME=ADMIN
