--- a/.env
+++ b/.env
@@ -17,13 +17,23 @@ MAX_GENERATION=999999
 JWT_VERIFICATION_SECRET = V3R1F1C@T1I0N_S3CR3T
 JWT_VERIFICATION_EXPIRESIN = 5M
 
-# RAIL WAY CONFIG
-DB_URL = mysql://root:jtwlz44uEDOs60ip5J1C@containers-us-west-112.railway.app:7430/railway
-DB_HOST = containers-us-west-112.railway.app
+# RAIL WAY CONFIG -abjit
+# DB_URL = mysql://root:jtwlz44uEDOs60ip5J1C@containers-us-west-112.railway.app:7430/railway
+# DB_HOST = containers-us-west-112.railway.app
+# DB_USER = root
+# DB_PASS = jtwlz44uEDOs60ip5J1C
+# DB_PORT = 7430
+# DB_COLLECTION = railway
+
+
+# RAIL WAY CONFIG - tej
+DB_URL = mysql://root:RIk5tBA1jpQyScGxpOGD@containers-us-west-190.railway.app:7430/railway
+DB_HOST = containers-us-west-190.railway.app
 DB_USER = root
-DB_PASS = jtwlz44uEDOs60ip5J1C
+DB_PASS = RIk5tBA1jpQyScGxpOGD
 DB_PORT = 7430
 DB_COLLECTION = railway
+
 
 # EMAIL SEND
 MAIL_USERNAME= ngr112001@gmail.com
