--- a/.env
+++ b/.env
@@ -18,11 +18,11 @@ JWT_VERIFICATION_SECRET = V3R1F1C@T1I0N_S3CR3T
 JWT_VERIFICATION_EXPIRESIN = 5M
 
 # RAIL WAY CONFIG
-DB_URL = mysql://root:bmB9Lgh7NUpUZdYM14mA@containers-us-west-65.railway.app:7162/railway
-DB_HOST = containers-us-west-65.railway.app
+DB_URL = mysql://root:RIk5tBA1jpQyScGxpOGD@containers-us-west-190.railway.app:7430/railway
+DB_HOST = containers-us-west-190.railway.app
 DB_USER = root
-DB_PASS = bmB9Lgh7NUpUZdYM14mA
-DB_PORT = 7162
+DB_PASS = RIk5tBA1jpQyScGxpOGD
+DB_PORT = 7430
 DB_COLLECTION = railway
 
 # EMAIL SEND
