updated code and verification

--- a/.env
+++ b/.env
@@ -8,6 +8,10 @@ BROWSER_COOKIES_EXPIRES_IN=10
 FORGET_PASSWORD_EXPIRES_AT=10M
 REFRESH_TOKEN=90d
 
+# CORS_ORIGIN_FOR_VERIFICATION
+CORSORIGIN_URL = http://localhost:3000
+
+
 # CODE GENERATION
 MIN_GENERATION=100000
 MAX_GENERATION=999999
@@ -25,8 +29,8 @@ DB_PORT = 7430
 DB_COLLECTION = railway
 
 # EMAIL SEND
-EMAIL = bebishnewar@gmail.com
-PASSWORD = qszjvbtkyhvlkloo
+MAIL_USERNAME = ngr112001@gmail.com
+APP_PASSWORD = wqjqmetwtawfyvts
 
 # NODE ENVIROMENT
 ENVIROMENT = production
